@@ -11,7 +11,9 @@
  *  areas relevant to making older projects compatible with the API changes of each new release.
  *
  * \section Sec_MigrationXXXXXX Migrating from 090810 to XXXXXX
- * No migration information for this version yet.
+ *
+ *  <b>Non-USB Library Components</b>
+ *    - The ADC_Off() function has been renamed to \ref ADC_ShutDown() to be consistent with the rest of the library.
  *
  * \section Sec_Migration090810 Migrating from 090605 to 090810
  *
